# src/routes/index.ts
@@ -2,6 +2,7 @@ import userRoute from './user'
 import authRoute from './login'
 import statsRoute from './stats'
 import courseRoute from './course'
+import individualSessionRoute from './individual-session'
 import metricRoute from './metric'
 import healthRoute from './health'
 import paymentRoute from './payment'
@@ -16,6 +17,7 @@ route.use('/user', userRoute)
 route.use('/stats', statsRoute)
 route.use('/auth', authRoute)
 route.use('/course', courseRoute)
+route.use('/individual-session', individualSessionRoute)
 route.use('/metric', metricRoute)
 route.use('/payment', paymentRoute)
 route.use('/shop', shopRoute)
